# spotify-dl

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: download.rs  lib.rs  main.rs  session.rs  track.rs  utils.rs
src/encoder/: mod.rs
src/media/: media_item.rs  media_queue.rs  metadata.rs  mod.rs
src/stream/: channel_sink.rs  stream.rs
