[package]
name = "spotify-dl"
version = "0.10.0"
authors = ["Guillem Castro <guillemcastro4@gmail.com>", "dcordonu"]
edition = "2024"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/GuillemCastro/spotify-dl"
repository = "https://github.com/GuillemCastro/spotify-dl"
description = "A command-line utility to download songs and playlists from Spotify"

[dependencies]
structopt = { version = "0.3", default-features = false }
indicatif = "0.18"
librespot = { version = "0.8.0", default-features = false, features = ["native-tls"] }
tokio = { version = "1.52.1", features = ["full", "tracing"] }
flacenc = { version = "0.5" }
audiotags = "0.5"
regex = "1.12.3"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry"] }
lazy_static = "1.5"
async-trait = "0.1"
dirs = "6.0"
mp3lame-encoder = { version = "0.2", optional = true }
futures = "0.3"
bytes = "1.11"
id3 = "1.16"
tryhard = "0.5.2"
thiserror = "2.0"
console = "0.16"
tracing-appender = "0.2"
once_cell = "1.21.4"
vergen = "=9.0.6" # to avoid dependency version conflich with vergen_lib

[features]
default = ["mp3"]
mp3 = ["dep:mp3lame-encoder"]

[profile.release]
# optimize for the smallest binary size
opt-level = "z"
lto = true
strip = true
debug = false
